# CPP_FILE_MANAGEMENT_SYSTEM

./: CMakeLists.txt  CPP_FILE_MANAGE.cpp  CPP_FILE_MANAGE.h  README.md
include/FileOps/: FileBaseOps.h  FileOpsDefinitions.h  FileOpsUtility.h  ReadFromFileOps.h  WriteToFileOps.h
include/MenuOps/: Menu.h
src/FileOps/: FileBaseOps.cpp  FileOpsUtility.cpp  ReadFromFileOps.cpp  WriteToFileOps.cpp
src/MenuOps/: Menu.cpp
src/MenuOps.h/: Menu.cpp
